syntax = "proto3";

package msg;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;

enum MessageType {
  UnknownMsg = 0;
  ProcessStartMsg = 12;
  ProcessEndMsg = 16;
}

message SharedObject {
  string path = 400;
  string signature = 401;
}

message Module {
  string name = 700;
}

/* sent at start of process */
message ProcessStart {
  bytes uuid = 299;
  string binpath = 300;
  int32 pid = 301;
  int32 parent_pid = 302;
  int64 time = 303;
  string signature = 304;
  string job_id = 305;
  string username = 306;
  string hostname = 307;
  string cmdline = 308;
  string cwd = 313;
  repeated string environment_variables = 309;
  repeated string arguments = 310;
  repeated SharedObject shared_objects = 311;
  repeated Module loaded_modules = 312;
}

/* sent at end of process */
message ProcessEnd {
  bytes uuid = 99;
  int64 time = 104;
  int64 startTime = 114; /* for easier elasticsearch lookups */

  /* resource info from getrusage() */
  int64 ru_utime = 105;    /* user CPU time used */
  int64 ru_stime = 106;    /* system CPU time used */
  int64 ru_maxrss = 107;   /* maximum resident set size */
  int64 ru_minflt = 108;   /* page reclaims (soft page faults) */
  int64 ru_majflt = 109;   /* page faults (hard page faults) */
  int64 ru_inblock = 110;  /* block input operations */
  int64 ru_oublock = 111;  /* block output operations */
  int64 ru_nvcsw = 112;    /* voluntary context switches */
  int64 ru_nivcsw = 113;   /* involuntary context switches */
}

// merged process data struct for replying through the query API
//message ProcessInfo {
//  bytes uuid       = 500;
//  string binpath   = 501;
//  int32 pid        = 502;
//  int32 parent_pid = 503;
//  int64 start_time = 504;
//  int64 end_time   = 505;
//  string signature = 506;
//  string job_id    = 507;
//  string username  = 508;
//  string hostname  = 509;
//  string cmdline   = 510;
//  string cwd       = 511;
//  repeated string environment_variables = 512;
//  repeated string arguments             = 513;
//  repeated SharedObject shared_objects  = 514;
//  repeated Module loaded_modules        = 515;
//
//  /* resource info from getrusage() */
//  int64 ru_utime   = 516;    /* user CPU time used */
//  int64 ru_stime   = 517;    /* system CPU time used */
//  int64 ru_maxrss  = 518;   /* maximum resident set size */
//  int64 ru_minflt  = 519;   /* page reclaims (soft page faults) */
//  int64 ru_majflt  = 520;   /* page faults (hard page faults) */
//  int64 ru_inblock = 521;  /* block input operations */
//  int64 ru_oublock = 522;  /* block output operations */
//  int64 ru_nvcsw   = 523;    /* voluntary context switches */
//  int64 ru_nivcsw  = 524;   /* involuntary context switches */
//}
